[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"
authors = ["Fabian Klopfer, Felix Mayer, Stephan Perren"]
publish = false
repository = "SomeUserName1/pir-ss19-homeworks-grp14"
readme = "README.md"


[dependencies]
# Common
serde = { version = "1.0.94", features = ["derive", "rc"]}
serde_json = "1.0.39"
serde_derive = "1.0.94"
failure = "0.1.5"

# ?
bytes = "0.4"
time = "0.1.42"

# Crypto
sequoia-openpgp = "0.8" # see bottom note
sha3 = "0.8.2"
rpassword = "*"

# P2P
tokio = "0.1"
tokio-io = "0.1.12"
tokio-codec = "0.1.1"
futures = "0.1"
tokio-timer = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }

# Storage
rocksdb = "0.10"


#### deps for sequoia-openpgp:
# apt install git rustc cargo clang make pkg-config nettle-dev libssl-dev
# capnproto libsqlite3-dev

# if error:
# failed to run custom build command for `nettle-sys v1.0.0
# then => https://github.com/jedahan/chattervan/issues/1
# may need to set ld library path for libnettle.so.7

